[chore #163414416] Created logo

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -438,7 +438,7 @@ header nav ul li a:hover, header nav ul li a.active
   width: 35%;
   align-content: center;
 }
-
+/*end admin styling*/
 /*end body container stylings*/
 
 
