--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -257,7 +257,7 @@ header nav ul li a:hover, header nav ul li a.active
 
 #select-party {
   color: green;
-  width: 300px;
+  width: 250px;
   height: 40px;
   margin-top: 10px;
   border-radius:5px;
@@ -266,7 +266,7 @@ header nav ul li a:hover, header nav ul li a.active
 
 #select-office {
   color: green;
-  width: 300px;
+  width: 250px;
   height: 40px;
   margin-top: 10px;
   border-radius:5px;
@@ -275,7 +275,7 @@ header nav ul li a:hover, header nav ul li a.active
 
 #select-name {
   color: green;
-  width: 300px;
+  width: 250px;
   height: 40px;
   border-radius: 5px;
   border: 2px solid green;
@@ -283,13 +283,23 @@ header nav ul li a:hover, header nav ul li a.active
 
 #whyrun {
   color: green;
-  width: 300px;
-  height: 300px;
-  border-radius: 20px
+  width: 250px;
+  height: 250px;
+  border-radius: 10px;
+  border: 3px solid green;
+  font-size: 18px;
+} 
+#whypetition {
+  color: green;
+  width: 250px;
+  height: 400px;
+  border-radius: 10px;
+  border: 3px solid green;
+  font-size: 18px;
 } 
 #reasons {
   margin-left: 20%;
-  width: 60%;
+  width: 250px;
   color: green;
 }
 
