--- a/css/login_style.css
+++ b/css/login_style.css
@@ -2,6 +2,7 @@
 form {
     margin: 0 auto;
     margin-top: 20px;
+    margin-left: -10%;
 }
 label {
     color: #555;
@@ -66,9 +67,9 @@ input[type=password]:focus {
     color: green;
 }
 #lower {
-    background: #fff;
+
     width: 50%;
-    margin-left: 18%;
+    margin-left: 10%;
     height: 60px;
     margin-top: 5px;
     border-bottom-right-radius: 3px;
@@ -119,4 +120,17 @@ input[type=submit]:active {
     max-width: 170px;
 /*     text-align: right; */
     padding-right: 0px;
+}
+@media(max-width: 768px){ 
+    form {
+        margin-left: 0
+    }
+    #inputId {
+        margin-left: -10px;
+    }
+    #lower {
+        
+        margin-left: 20%;
+        
+    }
 }
