--- a/UI/css/login_style.css
+++ b/UI/css/login_style.css
@@ -2,6 +2,7 @@
 form {
     margin: 0 auto;
     margin-top: 20px;
+    margin-left: -10%;
 }
 label {
     color: #555;
@@ -66,9 +67,9 @@ input[type=password]:focus {
     color: green;
 }
 #lower {
-    background: #ccffbb;
+
     width: 50%;
-    margin-left: 18%;
+    margin-left: 10%;
     height: 60px;
     margin-top: 5px;
     border-bottom-right-radius: 3px;
@@ -97,17 +98,39 @@ input[type=submit] {
     color: #fff;
     background-color: green; 
     border-radius: 30px;
-    border: 1px solid #66add6;
+    border: 1px solid #77ab59;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .3), inset 0 1px 0 rgba(255, 255, 255, .5);
     cursor: pointer;
 }
 input[type=submit]:hover {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#b6e2ff), to(#6ec2e8));
-    background-image: -moz-linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
-    background-image: linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#77ab59), to(#77ab59));
+    background-image: -moz-linear-gradient(top left 90deg, #77ab59 0%, #77ab59 100%);
+    background-image: linear-gradient(top left 90deg, #77ab59 0%, #77ab59 100%);
 }
 input[type=submit]:active {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#6ec2e8), to(#b6e2ff));
-    background-image: -moz-linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
-    background-image: linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#77ab59), to(#77ab59));
+    background-image: -moz-linear-gradient(top left 90deg, #77ab59 0%, #77ab59 100%);
+    background-image: linear-gradient(top left 90deg, #77ab59 0%, #77ab59 100%);
+}
+#inputField {
+    
+}
+#inputId {
+    min-width: 200px;
+    max-width: 170px;
+/*     text-align: right; */
+    padding-right: 0px;
+}
+@media(max-width: 768px){ 
+    form {
+        margin-left: 0
+    }
+    #inputId {
+        margin-left: -10px;
+    }
+    #lower {
+        
+        margin-left: 20%;
+        
+    }
 }
